[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprites/overworld/throne_room_back.png" type="Texture" id=1]
[ext_resource path="res://objects/overworld_frisk.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/throne_room.gd" type="Script" id=3]
[ext_resource path="res://sprites/overworld/dialogue_box.png" type="Texture" id=4]
[ext_resource path="res://custom_nodes/dialogue_label.gd" type="Script" id=5]
[ext_resource path="res://custom_nodes/periodic.gd" type="Script" id=6]
[ext_resource path="res://sprites/overworld/throne_asgore.png" type="Texture" id=7]
[ext_resource path="res://fonts/determination.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/faces/asgore_faces.png" type="Texture" id=9]
[ext_resource path="res://audio/asgore_takes_to_barrier.ogg" type="AudioStream" id=10]
[ext_resource path="res://sprites/overworld/throne_room_shadows.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 98, 130 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 98, 0, 98, 130 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 17 ) ],
"loop": false,
"name": "face_asgore0",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": false,
"name": "face_asgore1",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 840, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 960, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 1080, 0, 120, 164 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 1200, 0, 120, 164 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "stand_up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 10 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("gui/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "fade_in"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("gui/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 9.4, 9.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AnimationPlayer/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 5 )
}

[node name="throne_room" type="Node2D"]
script = ExtResource( 3 )

[node name="Periodic" type="Node" parent="."]
script = ExtResource( 6 )

[node name="gui" type="CanvasLayer" parent="."]

[node name="Control" type="TextureRect" parent="gui"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 4 )

[node name="faces" type="AnimatedSprite" parent="gui/Control"]
position = Vector2( 12, 12 )
frames = SubResource( 16 )
animation = "face_asgore1"
centered = false

[node name="DialogueLabel" type="RichTextLabel" parent="gui/Control"]
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/normal_font = SubResource( 15 )
script = ExtResource( 5 )
player_controlled = true

[node name="ColorRect" type="ColorRect" parent="gui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="backround" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="frisk" parent="." instance=ExtResource( 2 )]
position = Vector2( 299, 1013 )

[node name="asgore" type="AnimatedSprite" parent="."]
position = Vector2( 300, 380 )
frames = SubResource( 13 )

[node name="collisions" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PoolVector2Array( 0, 658, 15.958, 658, 56, 658, 56, 698, 96, 698, 96, 738, 136, 738, 136, 778, 176, 778, 176, 818, 216, 818, 216, 1056 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="collisions"]
polygon = PoolVector2Array( 376, 1056, 376, 818, 416, 818, 416, 778, 456, 778, 456, 738, 496, 738, 496, 698, 536, 698, 536, 658, 576, 658, 576, 578, 1460, 578 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="collisions"]
polygon = PoolVector2Array( 0, 658, 16, 658, 16, 178, 28, 178, 154, 178, 154, 284, 432, 284, 432, 178, 576, 178, -172, -64 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="collisions"]
polygon = PoolVector2Array( 576, 178, 576, 418, 1256, 418, 1256, 378, 1296, 378, 1296, 268, 1376, 268, 1376, 378, 1416, 378, 1416, 418, 1456, 418, 1456, 578, 1472, 578, 1472, 418, 1358, 6 )

[node name="camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1500
limit_bottom = 1100

[node name="trigger1" type="Area2D" parent="."]
position = Vector2( 298, 586 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger1"]
shape = SubResource( 1 )

[node name="backround2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 19 )
anims/fade_in = SubResource( 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = ExtResource( 10 )

[connection signal="dialogue_custom_event" from="gui/Control/DialogueLabel" to="." method="_on_dialogue_custom_event"]
[connection signal="body_entered" from="trigger1" to="." method="_on_trigger1_body_entered"]
